--- a/style.css
+++ b/style.css
@@ -1,52 +1,61 @@
-*{
+ *{
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-}
-
-nav{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 8vh;
-  background: #000000;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.logo{
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  font-size: 20px;
-}
-
-.nav-links{
-  display: flex;
-  justify-content: space-around;
-  width:35%;
-}
-
-.nav-links li{
-  list-style: none;
-}
-
-.nav-links a{
-  color: white;
   text-decoration: none;
-  letter-spacing: 3px;
+  list-style: none;
+} 
+
+.navbar{
+  height: 80px;
+  width: 100%; 
+  display: flex; 
+  justify-content: space-around;
+  align-items: center; 
+  
+  background: #000000;
+} 
+
+ .navbar-brand{
+  color: white;
+  margin-right: 20px;
+  letter-spacing: 5px;
+  font-size: 30px;
+  line-height: 80px;
+  padding: 0 140px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ }
+  
+.nav-ul{
+  float: right;
+  margin-right: 70px;
+}
+
+.nav-item{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 4px; 
+}
+
+ .nav-link{
+  line-height: 200px;
+  color: white;
+  font-size: 17px;
+  font-weight: 500;
+  padding: 7px 13px;
+  border-radius: 3px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-transform: uppercase;
   font-weight: bold;
-  font-size: 14px;
-}
+} 
 
-.burger{
- display: none;
-}
-
-.burger div{
-  width: 25px;
-  height: 5px;
-  background-color: rgb(226, 226, 226);
-  margin: 5px;
-}
-
-
+ a.active,a:hover{
+  background: rgb(29, 28, 28);
+  transition: .3s;
+} 
+  
+body{
+  background-color: black;
+}   
