--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@
 .a1Se1{
   position: absolute;
   height: 300px;
-  left: -35px;
-  top: 140px;
+  left: -25px;
+  top: 130px;
   right: 900px;
   width: 300px;
   font: small-caps bold 75px/1 'Oswald', sans-serif;
@@ -84,7 +84,7 @@
 
 .a2Se1 {
   position: absolute;
-  color: white;
+  color: rgb(142, 255, 160);
   font: small-caps bold 70px/1 sans-serif;
   top: 150px;
   left: 320px;
@@ -95,7 +95,7 @@
   color: white;
   font: small-caps bold 50px/1 sans-serif;
   top: 230px;
-  left: 215px;
+  left: 265px;
 }
 
 .a4Se1{
@@ -103,12 +103,12 @@
   color: white;
   font: small-caps bold 85px/1 sans-serif;
   top: 230px;
-  left: 310px;
+  left: 380px;
 }
 
 .a5Se1{
   position: absolute;
-  color: white;
+  color:rgb(240, 68, 68);
   font:  bold 140px/1 'Oswald', sans-serif;
   left: 200px;
   top: 320px;
