--- a/style.css
+++ b/style.css
@@ -64,54 +64,75 @@
   url(./image/otso-face2.png);
   background-repeat: no-repeat;
   background-color: black;
-  background-position: 840px 75px;
+  background-position: 890px 40px;
 }
 
+/* .logotipo{
+  max-width: 250px;
+  
+} */
 .a1Se1{
   position: absolute;
-  height: 300px;
-  left: -25px;
-  top: 130px;
-  right: 900px;
-  width: 300px;
-  font: small-caps bold 75px/1 'Oswald', sans-serif;
   color: white;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: bold;
-  width: 600px;
+  font-family: 'Source Code Pro',monospace;
+  font-size: 19px;
+  letter-spacing: 2px;
+  top: 200px;
+  left: 100px;
 }
 
 .a2Se1 {
   position: absolute;
-  color: rgb(142, 255, 160);
-  font: small-caps bold 70px/1 sans-serif;
-  top: 150px;
-  left: 320px;
+  color: white;
+  font-family: 'Source Code Pro',monospace;
+  font-size: 19px;
+  letter-spacing: 2px;
+  top: 230px;
+  left: 100px;
 }
 
 .a3Se1{
   position: absolute;
   color: white;
-  font: small-caps bold 50px/1 sans-serif;
-  top: 230px;
-  left: 265px;
+  font:19px/1 'Source Code Pro', monospace;
+  letter-spacing: 2px;
+  top: 262px;
+  left: 100px;
 }
 
 .a4Se1{
   position: absolute;
   color: white;
-  font: small-caps bold 85px/1 sans-serif;
-  top: 230px;
-  left: 380px;
+  font: 19px/1 'Source Code Pro', monospace;
+  letter-spacing: 2px;
+  top: 290px;
+  left: 100px;
 }
 
-.a5Se1{
+.div2Se1 img{
   position: absolute;
-  color:rgb(240, 68, 68);
-  font:  bold 140px/1 'Oswald', sans-serif;
-  left: 200px;
-  top: 320px;
-  text-transform: uppercase;
-  letter-spacing: 300;
+  height: 300px;
+  width:300px;
+  background-image: url(./image/logo-lobo2.png);
+  left: 170px;
 }
+
+.inicioBtn{
+  position: absolute;
+  background-color: white; /* Green */
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+  border-radius: 12px;
+  font: bold 18px/1 'Source Code Pro', monospace;
+  left: 200px;
+  top: 400px;
+}
+
+/* .inicioBtn:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+} */
