--- a/style.css
+++ b/style.css
@@ -19,14 +19,14 @@
 
  .navbar-brand{
   color: white;
-  margin-right: 20px;
+  margin-right: 15px;
   letter-spacing: 5px;
   font-size: 30px;
   line-height: 80px;
-  padding: 0 140px;
-  font-weight: 700;
+  padding:  140px;
+  font-weight: 850;
   text-transform: uppercase;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:  BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  }
   
 .nav-ul{
@@ -58,13 +58,12 @@
 } 
   
 .backg{
-  height: 577px;
+  height: 660px;
   width:100%;
   background-image: 
   url(./image/otso-face2.png);
   background-repeat: no-repeat;
-  background-color: black;
-  background-position: 890px 40px;
+  background-position: 900px 120px;
 }
 
 .a1Se1{
@@ -124,18 +123,25 @@
   left: 205px;
   top: 400px;
 
+  border-color: white;
+
+}
+
+body{
+  background-color: black;
 }
 
 .inicioBtn:hover{
   transition: .5s;
   background-color: rgb(0, 0, 0);
-  color: white
+  color: white;
+  border-color: white;
 }
 
 .about{
   height: 660px;
   width: 100%;
-  
   background-color: white;
+
   background-position: 1000px 100px;
 }
