--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@
   font-weight: 500;
   padding: 7px 13px;
   border-radius: 3px;
+  letter-spacing: 0.1em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
   font-weight: bold;
@@ -63,45 +64,177 @@
   
 }
 
-.a1Se1{
+.img {
   position: absolute;
-  color: white;
-  font-family: 'Source Code Pro',monospace;
-  font-size: 22px;
-  letter-spacing: 3px;
-  top: 200px;
-  left: 95px;
-  line-height: 60px;
+  width: 382px;
+  height: 400px;
+  background: url(image/otso-face2.png);
+  background-repeat: no-repeat;
+  left: 880px;
+  top: 150px;
 }
 
-.a2Se1 {
+.promptTitulo{
   position: absolute;
-  color: white;
-  font-family: 'Source Code Pro',monospace;
-  font-size: 22px;
-  letter-spacing:3px;
+  width: 283px; 
+  height: 42px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 52px;
+  text-align: justify;
+  letter-spacing: 0.22em;
+  color: #000000;
+  left: 170px;
+  top: 140px;
+}
+
+.versionTxt{
+  position: absolute;
+  width: 327px;
+  height: 37px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 52px;
+  text-align: justify;
+  letter-spacing: 0.22em;
+  color:white;
+  left: 185px;
+  top: 169px;
+}
+
+.introTxt{
+  position: absolute;
+  width: 365px;
+  height: 25px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 25px;
+  letter-spacing: 0.22em;
+  color:white;
+  left: 185px;
+  top: 205px;
+}
+
+.intro2Txt{
+  position: absolute;
+  width: 540px;
+  height: 96px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 20px;
+  text-align: justify;
+  letter-spacing: 0.22em;
+  color:white;
+  left: 185px;
   top: 230px;
-  left: 95px;
-  line-height: 60px;
-  
+  text-align: justify;
 }
 
-.a3Se1{
+.desktopTxt{
   position: absolute;
+  width: 298px;
+  height: 25px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 25px;
+  letter-spacing: 0.22em;
   color: white;
-  font:22px/1 'Source Code Pro', monospace;
-  letter-spacing: 3px;
-  top: 262px;
-  left: 95px;
-  line-height: 60px;
+  left: 185px;
+  top: 289px;
+
+}
+
+.ambienteTxt{
+  position: absolute;
+  width: 398px;
+  height: 25px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 25px;
+  letter-spacing: 0.22em;
+  color: white;
+  left: 185px;
+  top: 311px;
+}
+
+.portfolioTxt{
+  position: absolute;
+  width: 519px;
+  height: 25px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 25px;
+  letter-spacing: 0.22em;
+  color: white;
+  left: 185px;
+  top: 333px;
+}
+
+.waitingTxt{
+  position: absolute;
+  width: 542px;
+  height: 25px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 25px;
+  letter-spacing: 0.22em;
+  color: white;
+  left: 185px;
+  top: 356px;
 }
 
 
-.div2Se1 img{
+.retNav{
   position: absolute;
-  height: 300px;
-  width:300px;
-  background-image: url(./image/logo-lobo2.png);
+  width: 566px;
+  height: 31px;
+  top: 150px;
+  left: 160px;
+  background: #DFD3D3;
+}
+
+.retBlue {
+  position: absolute;
+  width: 569px;
+  height: 365px;
+  border: 3px solid #24EED6;
+  box-sizing: border-box;
+  top:146px;
+  left: 160px;
+}
+
+.retYellow{
+  position: absolute;
+  width: 569px;
+  height: 365px;
+  border: 3px solid #F7E017;
+  box-sizing: border-box;
+  top: 150px;
+  left: 165px;
+}
+
+.retRed{
+  position: absolute;
+  width: 569px;
+  height: 365px;
+  border: 3px solid #EA1616;
+  top: 154px;
   left: 170px;
 }
 
@@ -117,9 +250,8 @@
   text-transform: uppercase;
   border-radius: 12px;
   font: bold 18px/1 'Source Code Pro', monospace;
-  left: 205px;
-  top: 400px;
-
+  left: 370px;
+  top: 535px;
   border-color: white;
 
 }
