--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+ html{
+  scroll-behavior: smooth;
+ }
+
  *{
   margin: 0px;
   padding: 0px;
@@ -51,6 +55,7 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
   font-weight: bold;
+  scroll-behavior: smooth;
 } 
 
  .nav-link.active,.nav-link:hover{
@@ -61,7 +66,6 @@
 .backg{
   height: 660px;
   width:100%;
-  
 }
 
 .img {
@@ -269,7 +273,7 @@ body{
 }
 
 .about{
-  height: 550px;
+  height: 660px;
   width: 100%;
   background-position: 1000px 100px;
 }
@@ -328,11 +332,9 @@ body{
   width: 53px;
   height: 55px;
   background-image: url(image/javascript.svg);
-  top: 225px;
-  left: 120px;
+  top: 195px;
+  left: 150px;
 }
-
-
 
 
 .jsTitle{ 
@@ -346,8 +348,8 @@ body{
   text-align: justify;
   letter-spacing: 0.13em;
   color: black;
-  left: 100px;
-  top: 275px;
+  left: 130px;
+  top: 245px;
 }
 
 .xpJs{
@@ -362,8 +364,8 @@ body{
   text-align: justify;
   letter-spacing: 0.13em;
   color: black;
-  left: 32px;
-  top: 295px;
+  left: 62px;
+  top: 265px;
 }
 
 .levelJs{
@@ -377,8 +379,8 @@ body{
   text-align: justify;
   letter-spacing: 0.13em;
   color: black;
-  left: 203px;
-  top: 297px;
+  left: 233px;
+  top: 267px;
 }
 
 .greenBarJs{
@@ -387,8 +389,8 @@ body{
   height: 1px;
   border: 3px solid;
   color: #7CFA68;
-  left: 50px;
-  top: 320px;
+  left: 80px;
+  top: 290px;
 }
 
 .whiteBarJs{
@@ -397,6 +399,271 @@ body{
   height: 1px;
   background: #C4C4C4;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  left: 50px;
-  top: 320px;
+  left: 80px;
+  top: 290px;
+}
+
+.htmlSvg{
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-image: url(image/html-5.svg);
+  top: 195px;
+  left: 453px;
+}
+
+.cssSvg{
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-image: url(image/css.svg);
+  top: 195px;
+  left: 530px;
+}
+
+.htmlTitle{
+  position: absolute;
+  width: 115px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 52px;
+  text-align: justify;
+  letter-spacing: 0.13em;
+  color: black;
+  left: 465px;
+  top: 248px;
+}
+
+.greenBarHTML{
+  position: absolute;
+  width: 70px;
+  height: 1px;
+  border: 3px solid;
+  color: #7CFA68;
+  left: 420px;
+  top: 290px;
+}
+
+.whiteBarHTML{
+  position: absolute;
+  width: 200px;
+  height: 1px;
+  background: #C4C4C4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  left: 420px;
+  top: 290px;
+}
+
+.xpHTML{
+  position: absolute;
+  width: 14px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 10px;
+  line-height: 52px;
+  font-weight: bold;
+  text-align: justify;
+  letter-spacing: 0.13em;
+  color: black;
+  left: 403px;
+  top: 265px;
+}
+
+.levelHTML{
+  position: absolute;
+  width: 50px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 10px;
+  line-height: 52px;
+  text-align: justify;
+  letter-spacing: 0.13em;
+  color: black;
+  left: 595px;
+  top: 267px;
+}
+
+.gitSvg{
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-image: url(image/git.svg);
+  top: 370px;
+  left: 110px;
+}
+.hubSvg{
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-image: url(image/github.svg);
+  top: 370px;
+  left: 187px;
+}
+
+.gitTitle{
+  position: absolute;
+  width: 115px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.10em;
+  left: 127px;
+  top: 440px;
+}
+
+.greenBarGit{
+  position: absolute;
+  width: 47.33px;
+  height: 1px;
+  border: 3px solid;
+  color: #7CFA68;
+  left: 80px;
+  top: 470px;
+}
+
+.whiteBarGit{
+  position: absolute;
+  width: 200px;
+  height: 1px;
+  background: #C4C4C4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  left: 80px;
+  top: 470px;
+}
+
+.xpGit{
+  position: absolute;
+  width: 14px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 10px;
+  line-height: 52px;
+  font-weight: bold;
+  text-align: justify;
+  letter-spacing: 0.13em;
+  color: black;
+  left: 62px;
+  top: 445px;
+}
+
+.levelGit{
+  position: absolute;
+  width: 50px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 10px;
+  line-height: 52px;
+  text-align: justify;
+  letter-spacing: 0.13em;
+  color: black;
+  left: 233px;
+  top: 448px;
+}
+
+.psSvg{
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-image: url(image/photoshop-icon.svg);
+  top: 370px;
+  left: 490px;
+}
+
+.psTitle{
+  position: absolute;
+  width: 115px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.10em;
+  left: 475px;
+  top: 440px;
+}
+
+.whiteBarPs{
+  position: absolute;
+  width: 200px;
+  height: 1px;
+  background: #C4C4C4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  left: 420px;
+  top: 470px;
+}
+
+.greenBarPs{
+  position: absolute;
+  width: 47.33px;
+  height: 1px;
+  border: 3px solid;
+  color: #7CFA68;
+  left: 420px;
+  top: 470px;
+}
+
+.xpPs{
+  position: absolute;
+  width: 14px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 10px;
+  line-height: 52px;
+  font-weight: bold;
+  text-align: justify;
+  letter-spacing: 0.13em;
+  color: black;
+  left: 402px;
+  top: 446px;
+}
+
+.levelPs{
+  position: absolute;
+  width: 50px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 10px;
+  line-height: 52px;
+  text-align: justify;
+  letter-spacing: 0.13em;
+  color: black;
+  left: 590px;
+  top: 448px;
+}
+
+.hatTitle{
+  position: absolute;
+  width: 450px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: bold;
+  letter-spacing: 0.10em;
+  left: 140px;
+  top: 565px;
+}
+
+.hatSchool{
+  position: absolute;
+  width: 300px;
+  height: 52px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.10em;
+  left: 250px;
+  top: 590px;
 }
