--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ body{
 }
 
 .about{
-  height: 660px;
+  height: 697px;
   width: 100%;
   background-position: 1000px 100px;
 }
@@ -281,7 +281,7 @@ body{
 .whiteRetAbout{
   position: absolute;
   width: 697px;
-  height: 680px;
+  height: 697px;
   background-color: white;
 }
 
@@ -786,4 +786,79 @@ body{
   left: 758px;
   top: 957px;
   text-align: justify;
+}
+
+.Project{
+  height: 697px;
+  width: 100%;
+  background-position: 1000px 100px;
+}
+
+.whiteRetProject{
+  position: absolute;
+  width: 654px;
+  height: 698px;
+  background-color: white;
+  left: 695px;
+}
+
+.ret1Black{
+  position: absolute;
+  width: 242px;
+  height: 168px;
+  border: 1px solid white;
+  left: 70px;
+  top: 1460px;
+}
+
+.ret2Black{
+  position: absolute;
+  width: 242px;
+  height: 168px;
+  border: 1px solid white;
+  left: 390px;
+  top: 1460px;
+}
+
+.ret3Black{
+  position: absolute;
+  width: 540px;
+  height: 185px;
+  border: 1px solid white;
+  box-sizing: border-box;
+  top: 1660px;
+  left: 81px;
+
+}
+
+.ret4Black{
+  position: absolute;
+  width: 242px;
+  height: 168px;
+  border: 1px solid white;
+  top: 1880px;
+  left: 220px;
+
+}
+
+.ret1White{
+  position: absolute;
+  width: 616px;
+  height: 170px;
+  border: 1px solid black;
+  box-sizing: border-box;
+  transform: rotate(-90deg);
+  top: 250px;
+  left: -130px;
+}
+
+.ret2White{
+  position: absolute;
+  width: 616px;
+  height: 170px;
+  border: 1px solid black;
+  box-sizing: border-box;
+  transform: rotate(-90deg);
+  top: 250px;
+  left: 200px;
 }
